.. Author notes: this file is formatted with restructured text
   (http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
   The changelog style is adapted from Apache Lucene.

6.22.1  2014-10-23

Bug Fixes:
  * util and finagle: fix compiler warnings

Deprecation:
  * util-core: Add deprecation of RingBuffer to changelog
  * util-core: Removed IVar and IVarField 

Documentation:
  * util-core: Clarify Scaladoc of `Promise.attached`
  * util-core: Add self-type to `Promise.Detachable` and augment Promise Scaladocs
  * util-io: Better names for Buf.slice() paramters.

New Features:
  * util-app: Add App registration
  * util-cache Add asynchronous cache with TTL 
  * util-core: Add `Activity.future`

Package factoring:
  * util-logging: factor out testing code into new package util-test

6.22.0  2014-10-13

System Requirements:
  * util-core: prefer Await.result(future.liftToTry) to deprecated methods
  * c.t.util.Time: Scope Locals with `Local.let` instead of `save`+`restore`

Changes in Runtime Behavior:
  * util-logging:
    - Logging's default handler is now async by default via `com.twitter.logging.QueueingHandler`.
    - Two Flags allowing for customization:
      + `com.twitter.logging.log.async`: Default true, turns this functionality on/off.
      + `com.twitter.logging.log.async.maxsize`: Default 4096, max size of the async buffer.
  * util.RingBuffer: fix buffer size on drops
  * util-io: Fix Buf.ByteBuffer.slice
  * util-core: Future.sleep: short-circuit when duration <= 0
  * util-core: IVar and IVarField were removed. Use com.twitter.util.Promise instead because it provides a superset of IVar behavior.

New Features:
  * util-core: introduce Memoize.snappable
  * util-app: add Flaggable.ofSet
  * util-app: introduce Flag.let

Optimizations:
  * util-core: Perf improvement to ConcatBuf#slice
  * util-core: Avoid accumulation of listeners in Future.select
  * util-core: Event.filter only 1 call to filter predicate

Bug Fixes: